--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ body {
 .logo__body {
   max-width: 550px;
   padding-top: 70px;
-  padding-left: 46px;
+  margin-left: 46px;
 }
 @media (max-width: 1099px) {
   .logo__body {
@@ -226,7 +226,7 @@ body {
 }
 @media (max-width: 1099px) {
   .logo__body {
-    padding-left: calc(8px + 38 * ((100vw - 320px) / 779));
+    margin-left: calc(8px + 38 * ((100vw - 320px) / 779));
   }
 }
 .logo__title {
@@ -972,7 +972,7 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 235px;
           flex: 0 1 235px;
-  margin: 30px 0px 0px 0px;
+  margin: 30px 20px 0px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1436,13 +1436,13 @@ body {
 
 /*! ///---FOOTER---\\\ !*/
 @media (max-width: 990px) {
-  .logo__inner {
+  .logo__body {
     position: relative;
   }
   .logo__nav {
     position: absolute;
-    top: 120px;
     left: -100%;
+    bottom: -30px;
     gap: 20px;
     text-shadow: 0 0 10px #000, 0 0 10px #000, 0 0 10px #000;
     -webkit-box-orient: vertical;
@@ -1450,12 +1450,15 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     opacity: 0;
+    -webkit-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+            transform: translateY(100%);
     -webkit-transition: 0.7s;
     -o-transition: 0.7s;
     transition: 0.7s;
   }
   .logo ._active .logo__nav {
-    left: 10px;
+    left: 0px;
     opacity: 1;
   }
   .logo__burger {
@@ -1745,6 +1748,7 @@ body {
   }
   .blogs__links {
     position: absolute;
+    overflow: auto;
     top: 0;
     z-index: 2;
     text-align: right;
@@ -1753,9 +1757,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding: 90px 20px 0px 0px;
-    min-height: 100%;
-    min-width: 100%;
+    padding: 90px 20px 30px 0px;
+    height: 100%;
+    width: 100%;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
@@ -1764,7 +1768,7 @@ body {
     right: 0;
   }
   .blogs__link {
-    font-size: 30px !important;
+    font-size: 25px !important;
     margin: 0px 0px 40px 0px;
     font-weight: 700;
   }
@@ -1800,9 +1804,10 @@ body {
         flex-wrap: wrap;
     overflow: auto;
     max-height: 100%;
+    padding: 20px 0px 50px 0px;
   }
   .blogs__block {
-    width: 50%;
+    width: 33.33%;
     padding-bottom: 20px;
   }
   .blogs ._active .blogs__block {
@@ -1864,5 +1869,10 @@ body {
   }
   .contact__map {
     display: none;
+  }
+}
+@media (max-width: 540px) {
+  .blogs__block {
+    width: 50%;
   }
 }
