--- a/css/style.css
+++ b/css/style.css
@@ -1736,6 +1736,7 @@ body {
             flex-direction: column;
     position: relative;
     max-height: 100vh;
+    min-height: 590px;
   }
   .blogs__nav {
     -webkit-box-flex: 1;
