--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,8 +120,8 @@ body{
       @include adaptiv-value("max-width",420 ,260 ,1 );
       color: #ffffff;
       font-family: myriad-pro-condensed, sans-serif;
-      @include adaptiv-value("font-size",18 ,14 ,1 );
-      // font-size: 18px;
+      // @include adaptiv-value("font-size",18 ,14 ,1 );
+      font-size: 18px;
       font-weight: 400;
       font-style: normal;
       letter-spacing: normal;
@@ -139,7 +139,7 @@ body{
       margin: 0px 0px 0px 8px;
       color: $colorq;
       font-family:myriad-pro-condensed, sans-serif;
-      font-size: 18px;
+      font-size: 22px;
       font-weight: 400;
       font-style: normal;
       letter-spacing: normal;
@@ -165,8 +165,9 @@ body{
    &__body{
       // max-width: 550px;
       // padding:70px 0px  0px 46px;
-      @include adaptiv-value("max-width",550,200 ,1 );
-
+      display: block;
+      max-width: 100%;
+      
       @include adaptiv-value("padding-top",70,12 ,1 );
       // @include adaptiv-value("padding-left",46,8 ,1 );
       @include adaptiv-value("margin-left",46,8 ,1 );
@@ -174,11 +175,13 @@ body{
 
    }
    &__title {
+      @include adaptiv-value("max-width",550,200 ,1 );
+
       @include adaptiv-value("margin-bottom",60 ,15 ,1 );
       // margin: 0px 0px 60px 0px;
       color: #ffffff;
       font-family: myriad-pro-condensed, sans-serif;
-      @include adaptiv-value("font-size",55 ,20 ,1 );
+      @include adaptiv-value("font-size",55 ,35 ,1 );
       // font-size: 55px;
       font-weight: 700;
       font-style: normal;
@@ -186,6 +189,8 @@ body{
       // line-height: 48px;
       text-align: left;
       text-shadow: 0 0 10px #000,0 0 10px #000,0 0 10px #000;
+      transition: .4s;
+
       span{
          color: $colorq;
          font-style: normal;
@@ -199,19 +204,26 @@ body{
       display: flex;
       justify-content: space-between;
    }
+   &__menu{
+      display: inline-block;
+      position: absolute;
+      @include adaptiv-value("top",75,17 ,1 );
+      
+      right: 30px;
+   }
    &__burger{
       display: none;
-      height: 20px;
-      width: 25px;
+      height: 30px;
+      width: 35px;
       align-items: center;
       position: relative;
       span,&::after,&::before{
          width: 100%;
-         height: 2px;
+         height: 3px;
          background-color: $colorq;
          border-radius: 2px;
          box-shadow: 0 0 3px #000,0 0 3px #000;
-         transition: .3s;
+         transition: .5s;
 
       }
       span{
@@ -1380,27 +1392,43 @@ body{
 /*! ///---FOOTER---\\\ !*/
 
 @media(max-width:990px){
+.social__icon,.social__icon2{
+   height: 27px;
+   width: 27px;
+}
    .logo{
-      
-      &__body{
+      &__inner{
          position: relative;
-
+      }
+      ._active .logo__title{
+         opacity: 0;
       }
       &__nav{
          // display: none;
          position: absolute;
-         left: -100%;
-         bottom: -30px;
+         right: -100%;
+         top:0;
          gap: 20px;
+         padding: 0px 30px 0px 0px;
+      @include adaptiv-value("padding-top",140,60 ,1 );
+
+         background: rgba(0, 0, 0, 0.9);
+         min-width: 100%;
+         min-height: 100%;
          text-shadow: 0 0 10px #000,0 0 10px #000,0 0 10px #000,;
          flex-direction: column;
+         justify-content: flex-start;
          opacity: 0;
-         transform: translateY(100%);
          transition: .7s;
       }
       ._active .logo__nav{
-         left: 0px;
+         right: 0;
          opacity: 1;
+      }
+      &__link{
+         text-align: right;
+         font-size: 30px;
+
       }
       &__burger{
          display: flex;
@@ -1460,6 +1488,17 @@ body{
 //! ///-----------\\\ !\\
 
 /*! ///-----------\\\ !*/
+   .contact{
+      &__round {
+         width: 42px !important;
+         height: 42px !important;
+         position: relative;
+         margin: 0px 10px 0px 0px;
+      }
+   }
+//! ///----------\\\ !\\
+
+/*! ///----------\\\ !*/
    .footer{
       &__inner{
          position: relative;
@@ -1481,9 +1520,9 @@ body{
       }
       &__burger{
          display: inline-flex;
-         top: 20px !important;
+         top: 40px !important;
          position:absolute;
-         left: 20px;
+         right: 40px;
          transform:none !important;
          z-index: 3;
          cursor: pointer;
@@ -1539,6 +1578,15 @@ body{
       }
       ._active .footer__name{
          opacity: 0;
+      }
+      &__round {
+         display: inline-block;
+         width: 42px;
+         height: 42px;
+         position: relative;
+         background-color: rgb(255, 255, 255);
+         border-radius: 50%;
+         margin: 0px 10px 0px 0px;
       }
    }
 }
@@ -1672,8 +1720,6 @@ body{
          padding: 20px 10px 10px 10px;
          flex-direction: column;
          position: relative;
-         max-height: 100vh;
-         min-height: 590px;
       }
       &__nav{
          flex: 1;
@@ -1738,13 +1784,13 @@ body{
          padding-bottom: 20px;
       }
       ._active .blogs__block{
-         animation: blogs 3s linear infinite running;
+         animation: blogs 2s linear infinite running;
          overflow: hidden;
       }
       @keyframes blogs {
          0% {transform: none;}
-         33% {transform: perspective(400px) rotatex(45deg) scale(0.7); }
-         66% {transform: perspective(400px) rotatex(-45deg) scale(0.7); }
+         33% {transform: perspective(400px) rotatex(10deg) scale(0.9); }
+         66% {transform: perspective(400px) rotatex(-10deg) scale(0.9); }
          100% {transform:none; }
 
       }
