--- a/css/style.css
+++ b/css/style.css
@@ -1464,7 +1464,7 @@ body {
     gap: 20px;
     padding: 0px 30px 0px 0px;
     padding-top: 140px;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.5);
     min-width: 100%;
     min-height: 100%;
     text-shadow: 0 0 10px #000, 0 0 10px #000, 0 0 10px #000;
@@ -1475,10 +1475,9 @@ body {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    opacity: 0;
-    -webkit-transition: 0.7s;
-    -o-transition: 0.7s;
-    transition: 0.7s;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
   }
   /*! ///-----------\\\ !*/
   /*! ///-----------\\\ !*/
@@ -1492,6 +1491,19 @@ body {
   }
 }
 @media (max-width: 990px) {
+  .logo__nav::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+  }
+}
+@media (max-width: 990px) {
   .logo ._active .logo__nav {
     right: 0;
     opacity: 1;
@@ -1501,6 +1513,52 @@ body {
   .logo__link {
     text-align: right;
     font-size: 30px;
+    margin-right: -100%;
+    opacity: 0;
+    z-index: 2;
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+  }
+  .logo__link:hover {
+    border-bottom: none;
+  }
+  .logo__link:nth-child(1) {
+    -webkit-transition: margin-right 0.4s 0.1s, -webkit-transform 0.9s 0.1s;
+    transition: margin-right 0.4s 0.1s, -webkit-transform 0.9s 0.1s;
+    -o-transition: margin-right 0.4s 0.1s, transform 0.9s 0.1s;
+    transition: margin-right 0.4s 0.1s, transform 0.9s 0.1s;
+    transition: margin-right 0.4s 0.1s, transform 0.9s 0.1s, -webkit-transform 0.9s 0.1s;
+  }
+  .logo__link:nth-child(2) {
+    -webkit-transition: margin-right 0.4s 0.2s, -webkit-transform 0.9s 0.2s;
+    transition: margin-right 0.4s 0.2s, -webkit-transform 0.9s 0.2s;
+    -o-transition: margin-right 0.4s 0.2s, transform 0.9s 0.2s;
+    transition: margin-right 0.4s 0.2s, transform 0.9s 0.2s;
+    transition: margin-right 0.4s 0.2s, transform 0.9s 0.2s, -webkit-transform 0.9s 0.2s;
+  }
+  .logo__link:nth-child(3) {
+    -webkit-transition: margin-right 0.4s 0.3s, -webkit-transform 0.9s 0.3s;
+    transition: margin-right 0.4s 0.3s, -webkit-transform 0.9s 0.3s;
+    -o-transition: margin-right 0.4s 0.3s, transform 0.9s 0.3s;
+    transition: margin-right 0.4s 0.3s, transform 0.9s 0.3s;
+    transition: margin-right 0.4s 0.3s, transform 0.9s 0.3s, -webkit-transform 0.9s 0.3s;
+  }
+  .logo__link:nth-child(4) {
+    -webkit-transition: margin-right 0.4s 0.4s, -webkit-transform 0.9s 0.4s;
+    transition: margin-right 0.4s 0.4s, -webkit-transform 0.9s 0.4s;
+    -o-transition: margin-right 0.4s 0.4s, transform 0.9s 0.4s;
+    transition: margin-right 0.4s 0.4s, transform 0.9s 0.4s;
+    transition: margin-right 0.4s 0.4s, transform 0.9s 0.4s, -webkit-transform 0.9s 0.4s;
+  }
+}
+@media (max-width: 990px) {
+  .logo ._active .logo__link {
+    margin-right: 0;
+    opacity: 1;
+    -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+            transform: scale(1);
   }
 }
 @media (max-width: 990px) {
@@ -1508,6 +1566,8 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    cursor: pointer;
+    z-index: 2;
   }
 }
 @media (max-width: 990px) {
@@ -1573,19 +1633,6 @@ body {
     position: relative;
     margin: 0px 0px;
   }
-  .footer__inner::before {
-    content: "";
-    width: 100%;
-    height: 55px;
-    background-color: rgb(0, 0, 0);
-    position: absolute;
-    top: 0;
-    left: -100%;
-    z-index: 3;
-  }
-  .footer ._active .footer__inner::before {
-    left: 0;
-  }
   .footer__burger {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -1604,23 +1651,32 @@ body {
     top: 0;
     left: -100%;
     margin: 0px 0px;
-    background-color: rgba(0, 0, 0, 0.608);
     min-width: 100%;
-    height: 100%;
+    min-height: 100%;
     z-index: 2;
     overflow: auto;
     padding: 0px 30px;
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
-    opacity: 0;
+  }
+  .footer__left::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
   }
   .footer__left::-webkit-scrollbar {
     display: none;
   }
   .footer ._active .footer__left {
     left: 0;
-    opacity: 1;
   }
   .footer ._active .logo__burger span {
     -webkit-transform: scale(0);
@@ -1643,7 +1699,10 @@ body {
     font-size: 22px;
   }
   .footer__logo {
-    margin: 80px 0px 40px 0px;
+    margin: 24px 0px 40px 0px;
+  }
+  .footer__social {
+    margin: 0px 0px 10px 0px;
   }
   .footer__right {
     min-height: 100vh;
@@ -1818,7 +1877,6 @@ body {
     z-index: 2;
     text-align: right;
     right: -100%;
-    background-color: rgba(255, 255, 255, 0.812);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1828,6 +1886,18 @@ body {
     -webkit-transition: 0.4s;
     -o-transition: 0.4s;
     transition: 0.4s;
+  }
+  .blogs__links::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(127, 127, 127, 0.249);
+    -webkit-backdrop-filter: blur(9px);
+            backdrop-filter: blur(9px);
   }
   .blogs ._active .blogs__links {
     right: 0;
