--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,7 +64,13 @@ $colorq:#ffc600;
 }
 body{
    background-color: #010d15;
+   
 }
+// html{
+//    &::-webkit-scrollbar-button{
+//       display: none;
+//    }
+// }
 
 .container {
    max-width: 1198px;
@@ -127,6 +133,7 @@ body{
       letter-spacing: normal;
       line-height: normal;
       text-align: left;
+      transition: 1s;
       &::first-letter{
          color:$colorq;
          font-style: normal;
@@ -507,6 +514,7 @@ body{
       font-weight: 600;
       color: #101010;
       position: relative;
+      cursor: pointer;
       &:hover::after{
          background-color: $colorq;
       }
@@ -519,6 +527,20 @@ body{
          left: 50%;
          transform: translateX(-50%);
          bottom: -3px;
+         transition: .2s;
+         
+      }
+   }
+   .line{
+      &::after{
+         content: "";
+         width: 50%;
+         height: 2px;
+         background-color:$colorq;
+         position: absolute;
+         left: 50%;
+         transform: translateX(-50%);
+         bottom: -5px;
          transition: .2s;
          
       }
@@ -538,6 +560,9 @@ body{
       position: relative;
       left: -0.5px;
       // gap: .3px ;
+   }
+   .none{
+      display: none;
    }
 
    &__photo {
@@ -979,6 +1004,7 @@ body{
       margin: 0px 0px 30px 0px;
       transition: .3s;
       white-space: nowrap;
+      cursor: pointer;
       &:last-child{
          margin: 0px 0px;
       }
@@ -1002,6 +1028,9 @@ body{
    &__block {
       width: 33.333%;
       padding:0px 10px 10px 10px;
+   }
+   .none{
+      display:none;
    }
 
    &__photo {
@@ -1322,7 +1351,7 @@ body{
             text-transform: uppercase;
             margin: 0px 0px 24px 0px;
             transition: .3s;
-
+            cursor: pointer;
             &:nth-child(9){
                margin: 0px 0px;
             }
@@ -1439,14 +1468,37 @@ body{
          opacity: 1;
       }
       &__link{
+         align-self: flex-end;
          text-align: right;
          font-size: 30px;
          margin-right: -100%;
          opacity: 0;
          z-index: 2;
+         cursor: pointer;
          transform: scale(0);
+         &::after{
+            content: '';
+            opacity: 0;
+            position: absolute;
+            width: 50px;
+            top:0 ;
+            right: -140px;
+            height: 100%;
+            background: linear-gradient(270deg,$colorq,transparent);
+            transition: .3s;
+         }
          &:hover{
-            border-bottom:none;
+            padding: 0px 0px 0px 0px;
+            border-bottom: none;
+            // right: 15px;
+            padding-right: 15px;
+         }
+         &:hover::after{
+            right: -40px;
+            opacity: 1;
+         }
+         &:hover:nth-child(1),&:hover:nth-child(2),&:hover:nth-child(3),&:hover:nth-child(4){
+            transition: padding .3s .1s;
          }
          &:nth-child(1){
             transition:margin-right .4s .1s,transform .9s .1s;
@@ -1473,8 +1525,6 @@ body{
          margin-right: 0;
          opacity: 1;
          transform: scale(1);
-
-
       }
       &__burger{
          display: flex;
@@ -1503,7 +1553,7 @@ body{
          padding: 0px 0px;
       }
       &__logo{
-         padding: 0px 0px 20px 0px;
+         padding: 20px 0px 20px 0px;
          &::after{
             display: none;
          }
@@ -1512,9 +1562,33 @@ body{
          flex: 0 0 100%;
          
       }
-      
+      &__main{
+         font-size: 18px;
+      }
+      &__description{
+         font-size: 16px;
+      }
       &__middle{
-         margin: 20px 0px 30px 0px;
+         margin: 0px 0px 0px 0px;
+      }
+      &__title{
+         font-size: 20px;
+      }
+      &__texts{
+         font-size: 16px;
+         margin: auto;
+      }
+      &__bottom{
+         margin-top: 100px;
+      }
+      &__nav{
+         max-width: none;
+         gap: 20px;
+         justify-content: flex-start;
+         padding: 10px 0px;
+      }
+      &__link{
+         font-size: 14px;
       }
    }
 //! ///-----------\\\ !\\
@@ -1525,6 +1599,7 @@ body{
          flex: 0 0 50%;
       }
    }
+
 //! ///-----------\\\ !\\
 
 /*! ///-----------\\\ !*/
@@ -1587,8 +1662,6 @@ body{
             bottom: 0;
             z-index: -1;
             backdrop-filter: blur(15px);
-
-
          }
          &::-webkit-scrollbar{
             display: none;
@@ -1614,6 +1687,8 @@ body{
       }
       &__link{
          font-size: 22px;
+         cursor: pointer;
+
       }
       &__logo{
          margin: 24px 0px 40px 0px;
@@ -1663,6 +1738,13 @@ body{
       &__body{
          padding-top: 20px;
       }
+      &__subtitle{
+         font-size: 20px;
+      }
+      &__text{
+         font-size: 18px;
+      }
+      
       &__main{
          margin: 30px 0px 10px 0px;
       }
@@ -1696,17 +1778,26 @@ body{
       }
       &__middle{
          padding: 0px 0px 15px 0px;
+         font-size: 20px;
       }
       &__foot{
          padding: 0px 0px 20px 0px;
+         font-size: 18px;
          }
       }
 //! ///----------\\\ !\\
 
 /*! ///----------\\\ !*/
       .services{
+         &__inner{
+         min-height: 100vh;
+
+         }
          &__top{
-            padding: 30px 0px;
+            padding: 50px 0px;
+         }
+         &__body{
+            padding: 0px 0px 50px 0px;
          }
          &__container{
             margin: auto;
@@ -1715,7 +1806,7 @@ body{
          &__block{
             flex: 0 0 100%;
             padding: 0px 0px 0px 0px;
-            margin: 0px 0px 20px 0px;
+            margin: 0px 0px 50px 0px;
             &:nth-child(2n+1){
                padding:0px 0px 0px 0px;
             }
@@ -1725,6 +1816,10 @@ body{
          }
          &__title{
             margin: 0px 0px 7px 0px;
+            font-size: 20px;
+         }
+         &__text{
+            font-size: 16px;
          }
       }
 //! ///-----------\\\ !\\
@@ -1740,6 +1835,12 @@ body{
          }
          &__top{
             padding: 0px 50px 30px 0px;
+         }
+         &__title{
+            font-size: 20px;
+         }
+         &__text{
+            font-size: 18px;
          }
          &__block{
             width: 50%;
@@ -1761,6 +1862,12 @@ body{
       &__left{
          order: 1;
          max-width: 450px;
+      }
+      &__title{
+         font-size: 20px;
+      }
+      &__text{
+         font-size: 16px;
       }
       &__right{
          margin: 0px 0px 30px 0px;
@@ -1790,12 +1897,14 @@ body{
          z-index: 2;
          text-align: right;
          right: -100%;
-         // background-color: rgba(255, 255, 255, 0.1);
          display: flex;
          padding: 90px 20px 30px 0px;
          height: 100%;
          width: 100%;
          transition: .4s;
+         &::-webkit-scrollbar{
+            display: none;
+         }
          &::before{
             content: "";
             position: absolute;
@@ -1815,8 +1924,16 @@ body{
       }
       &__link{
          font-size: 25px !important;
-         margin: 0px 0px 40px 0px;
+         margin: 0px 0px 30px 0px;
          font-weight: 700;
+         padding: 3px;
+         border-radius: 5px;
+         background: linear-gradient(90deg,$colorq,transparent);
+         align-self: flex-end;
+         &:hover{
+            color: #fff;
+         }
+
       }
       &__burger{
          position: absolute;
@@ -1861,6 +1978,15 @@ body{
          100% {transform:none; }
 
       }
+      &__name{
+         font-size: 20px;
+      }
+      &__title{
+         font-size: 18px;
+      }
+      &__subtitle{
+         font-size: 16px;
+      }
    }
 
 //! ///------------\\\ !\\
@@ -1881,6 +2007,15 @@ body{
          min-width: auto;
          margin: 0px auto;
       }
+      &__head{
+         font-size: 20px;
+      }
+      th{
+         font-size: 20px;
+      }
+      td{
+         font-size: 16px;
+      }
       &__map{
          display: none;
       }
@@ -1890,6 +2025,17 @@ body{
    .blogs{
       &__block{
          width: 50%;
+      }
+   }
+   .about{
+      &__nav{
+         gap: 0;
+         justify-content: space-between;
+      }
+      &__link{
+         font-size: 11px;
+         position: relative;
+         z-index: 1;
       }
    }
 }
