--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,6 +78,33 @@ body{
    background-color: #ffffff;
    overflow: hidden;
 }
+._animate .container{
+      transform: scale(0.8);
+      transition: 0.4s 0.1s;
+      position: relative;
+      // top: -40px;
+}
+._animate .container::before{
+   position: absolute;
+   content: '';
+   max-width: 100%;
+   height: 100%;
+   z-index: 10;
+   background-color: rgba(0, 0, 0, 0.9);
+   transition: 0.7s ;
+   pointer-events: none;
+}
+._go .container{
+   transform: scale(1);
+   top: 0;
+   
+
+}
+._go .container::before{
+   background-color: rgba(0, 0, 0, 0);
+
+
+}
 
 //! ///---ELEMENTS---\\\ !\\
 
@@ -168,6 +195,7 @@ body{
    &__inner {
       background:top / cover no-repeat url(../img/Layer_5.jpg) ;
       @include adaptiv-value("min-height",654 ,500 ,1 );
+      
    }
    &__body{
       // max-width: 550px;
@@ -289,7 +317,10 @@ body{
       height: auto;
       background-color: #fff;
       padding: 0px 10px;
+
+      
    }
+
 
    &__top {
       padding:36px 0px 0px 0px;
@@ -403,7 +434,7 @@ body{
    &__middle {
       font-family: myriad-pro-condensed, sans-serif;
 
-      margin: 0px 0px 111px 0px;
+      margin: 0px 0px 40px 0px;
 
    }
 
@@ -465,7 +496,7 @@ body{
       margin: 0px auto;
       font-family: myriad-pro-condensed, sans-serif;
 
-      padding:0px 0px 23px 0px;
+      padding:40px 0px 23px 0px;
    }
 
    &__foot {
@@ -783,7 +814,6 @@ body{
       margin: 85px 0px 0px 0px;
       font-size: 30px;
       white-space: nowrap;
-
       span{
          font-size: 50px;
       }
@@ -795,6 +825,7 @@ body{
 
 
    }
+   
 
    &__body {
       max-width: 782px;
@@ -883,6 +914,7 @@ body{
    &__logo {
       margin: 55px 0px 0px 0px;
       @extend %firstletter;
+      
       span{
          font-size: 30px;
          font-weight: 600;
@@ -890,6 +922,7 @@ body{
 
       }
    }
+   
 
    &__body {
       margin: 0px 0px 136px 42px;
@@ -1569,7 +1602,7 @@ body{
          font-size: 16px;
       }
       &__middle{
-         margin: 0px 0px 0px 0px;
+         margin: 0px 0px 40px 0px;
       }
       &__title{
          font-size: 20px;
@@ -1577,9 +1610,6 @@ body{
       &__texts{
          font-size: 16px;
          margin: auto;
-      }
-      &__bottom{
-         margin-top: 100px;
       }
       &__nav{
          max-width: none;
@@ -1697,7 +1727,7 @@ body{
          margin: 0px 0px 10px 0px;
       }
       &__right{
-         min-height: 100vh;
+         min-height: 101vh;
          min-width: 100%;
          // background-position: 70%;
       }
@@ -2028,9 +2058,13 @@ body{
       }
    }
    .about{
+      &__bottom{
+         padding-top: 30px;
+      }
       &__nav{
          gap: 0;
          justify-content: space-between;
+         padding: 0px 5px;
       }
       &__link{
          font-size: 11px;
