--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,12 @@ body {
   -o-transition: 0.2s;
   transition: 0.2s;
 }
-.about .line::after {
+
+/*! ///---ABOUT---\\\ !*/
+.galery {
+  min-width: 100%;
+}
+.galery .line::after {
   content: "";
   width: 50%;
   height: 2px;
@@ -663,20 +668,15 @@ body {
   -o-transition: 0.2s;
   transition: 0.2s;
 }
-
-/*! ///---ABOUT---\\\ !*/
-.galery {
-  min-width: 100%;
-}
 .galery__intro {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: calc(100% + 1px);
+  width: calc(100% + 2px);
   position: relative;
-  left: -0.5px;
+  left: -1px;
 }
 .galery .none {
   display: none;
@@ -686,6 +686,7 @@ body {
       -ms-flex: 0 0 25%;
           flex: 0 0 25%;
   border: 0.5px solid #fff;
+  overflow: hidden;
 }
 .galery__photo:nth-child(n+5) {
   border-bottom: none;
@@ -695,6 +696,26 @@ body {
      object-fit: cover;
   width: 100%;
   height: 100%;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  opacity: 0;
+}
+.galery__photo:nth-child(4n+1) img, .galery__photo:nth-child(4n+2) img {
+  -webkit-transform: translateX(-120%);
+      -ms-transform: translateX(-120%);
+          transform: translateX(-120%);
+}
+.galery__photo:nth-child(4n+3) img, .galery__photo:nth-child(4n+4) img {
+  -webkit-transform: translateX(120%);
+      -ms-transform: translateX(120%);
+          transform: translateX(120%);
+}
+.galery ._go img {
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+  opacity: 1;
 }
 
 /*! ///---GALERY---\\\ !*/
@@ -756,6 +777,18 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  opacity: 0;
+}
+.process__element:nth-child(2n+1) {
+  -webkit-transform: translate3d(-50%, 0, 0);
+          transform: translate3d(-50%, 0, 0);
+}
+.process__element:nth-child(2n+2) {
+  -webkit-transform: translate3d(50%, 0, 0);
+          transform: translate3d(50%, 0, 0);
 }
 .process__element img {
   width: 100%;
@@ -776,6 +809,11 @@ body {
 .process__element--text:nth-child(6) {
   padding-right: 0;
   padding-bottom: 0;
+}
+.process ._go {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0) scale(1);
+          transform: translate3d(0, 0, 0) scale(1);
 }
 .process__name {
   max-width: 100%;
@@ -1727,6 +1765,21 @@ body {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
+  }
+  .galery__photo:nth-child(2n) img {
+    -webkit-transform: translateX(-120%);
+        -ms-transform: translateX(-120%);
+            transform: translateX(-120%);
+  }
+  .galery__photo:nth-child(2n+1) img {
+    -webkit-transform: translateX(120%);
+        -ms-transform: translateX(120%);
+            transform: translateX(120%);
+  }
+  .galery ._go img {
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
   }
 }
 @media (max-width: 990px) {
