--- a/scss/style.scss
+++ b/scss/style.scss
@@ -562,6 +562,16 @@ body{
          
       }
    }
+   
+}
+
+
+//! ///---ABOUT---\\\ !\\
+
+/*! ///---ABOUT---\\\ !*/
+
+.galery {
+   min-width: 100%;
    .line{
       &::after{
          content: "";
@@ -576,21 +586,13 @@ body{
          
       }
    }
-}
-
-//! ///---ABOUT---\\\ !\\
-
-/*! ///---ABOUT---\\\ !*/
-
-.galery {
-   min-width: 100%;
    &__intro {
       display: flex;
       flex-wrap: wrap;
-      width: calc(100% + 1px);
+      width: calc(100% + 2px);
       position: relative;
-      left: -0.5px;
-      // gap: .3px ;
+      left: -1px;
+      // gap: 3px ;
    }
    .none{
       display: none;
@@ -599,6 +601,7 @@ body{
    &__photo {
       flex: 0 0 25%;
       border: 0.5px solid #fff;
+      overflow: hidden;
       &:nth-child(n+5) {
          border-bottom: none;
       }
@@ -606,8 +609,21 @@ body{
          object-fit: cover;
          width: 100%;
          height: 100%;
+         transition: 1s;
+         opacity: 0;
+         
          
       }
+      &:nth-child(4n+1) img,&:nth-child(4n+2) img{
+         transform: translateX(-120%);
+         }
+      &:nth-child(4n+3) img,&:nth-child(4n+4) img{
+         transform: translateX(120%);
+         }
+   }
+   ._go img{
+      transform: translateX(0);
+      opacity: 1;
    }
 }
 
@@ -674,6 +690,18 @@ body{
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      transition: 1s;
+      opacity: 0;
+      // transform: translateX(-120%);
+      &:nth-child(2n+1){
+      transform: translate3d(-50%,0,0);
+
+
+      }
+      &:nth-child(2n+2){
+         transform: translate3d(50%,0,0);
+   
+         }
       img{
          width: 100%;
          height: 100%;
@@ -696,6 +724,11 @@ body{
       }
       
 	}
+   ._go{
+      opacity: 1;
+      transform: translate3d(0,0,0) scale(1);
+      
+   }
 
 	&__name {
       max-width: 100%;
@@ -1627,7 +1660,17 @@ body{
    .galery{
       &__photo{
          flex: 0 0 50%;
+         &:nth-child(2n) img{
+            transform: translateX(-120%);
+            }
+         &:nth-child(2n+1) img{
+            transform: translateX(120%);
+            }
       }
+      ._go img{
+         transform: translateX(0);
+      }
+      
    }
 
 //! ///-----------\\\ !\\
